Initial project structure and deployment setup
Add core project files including Dockerfile, Kubernetes manifests, AWS CloudFormation template, and GitHub Actions workflows for infrastructure provisioning and deployment. Introduce main application modules under prod_assistant, utility scripts, sample data, and supporting assets. Remove obsolete main.py and git_commands.ipynb. Update .gitignore for Python, environment, and editor files.

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,25 @@ wheels/
 *.egg-info
 
 # Virtual environments
-botenv
+.venv
+# Virtual environment
+env/
+venv/
+
+# IDE/editor settings
+.vscode/
+.idea/
+
+# Environment files
+.env
+*.env
+
+# Logs
+*.log
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+archive/
+
+.vscode/
